<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="join_now">Join Now</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="let_s_get">Let\'s Get</string>
    <string name="started">Started</string>
    <string name="buy_premium_and_authentic_shoes_online_and_get_it_delivered_right_at_your_doorstep">Buy premium and authentic shoes online and get it delivered right at your doorstep.</string>
    <string name="banner">banner</string>
    <string name="email_address">Email address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the terms and conditions</string>
    <string name="create_account">Create Account</string>
    <string name="connect_with_the_online_store_today">Connect with the online store today!</string>
    <string name="shoe_store">Shoe Store</string>
    <string name="welcomeBack">Hi, Welcome Back! &#128075;</string>
    <string name="hello_again_you_ve_been_missed">Hello again, you\'ve been missed!</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="buy_shoes_online">Buy Shoes Online</string>
    <string name="explore_vast_selection_of_prodcuts_from_top_brands">Explore vast selection of prodcuts from top brands.</string>
    <string name="next">Next</string>
    <string name="introonboarding">introOnboarding</string>
    <string name="finish">Finish</string>
    <string name="free_home_delivery">Free Home Delivery</string>
    <string name="get_your_shoes_delivered_at_your_doorstep">Get your shoes delivered at your doorstep.</string>
    <string name="description">Nike Air Max Summer Collection</string>
    <string name="price">$320</string>
    <string name="size">Size : 9</string>
    <string name="title">Nike Air Max 97</string>
    <string name="cost">Price : $320</string>
    <string name="shoe_title">Shoe Title</string>
    <string name="shoe_description">Shoe Description</string>
    <string name="shoe_cost">Shoe Cost</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="submit">Submit</string>
</resources>